--- a/index.html
+++ b/index.html
@@ -90,14 +90,17 @@
           <a class="btn-close-layer btn-lame" href="weight-shot.html">앉은뱅이</a>
         </div>
       </div>
-      <div class="writing-explanation">작성중인 계량증명서가 있습니다</div>
-      <button class="btn-select btn-navfoot-add" type="button" aria-label="계근대 앉은뱅이 선택 버튼"></button>
+      <!-- <div class="writing-explanation">작성중인 계량증명서가 있습니다</div> -->
+      <button 
+        class="btn-select" 
+        type="button" 
+        onclick="location.href='car-control.html'"></button>
       <nav class="nav-foot__cont">
         <ul>
           <li class="ico-main active"><a href="index.html">메인</a></li>
           <li class="ico-board"><a href="car-wash.html">세차</a></li>
-          <li class="ico-doc"><a href="weighing-confirm-list.html">주변</a></li>
-          <li class="ico-mypage"><a href="myinfo-main.html">더보기</a></li>
+          <li class="ico-doc"><a href="around.html">주변</a></li>
+          <li class="ico-mypage"><a href="more-view.html">더보기</a></li>
         </ul>
       </nav>
     </div>
