--- a/no-reservation.html
+++ b/no-reservation.html
@@ -19,58 +19,9 @@
     </header>
     <main class="main pb150">
       <section class="content">
-        <div class="vehicle-management align both vm pt26">
-          <div class="text-type5">정기세차</div>
-          <a class="link" href="#none">취소하기</a>
-        </div>
-        <div class="card-main px16 py18 mt24" onclick="location.href='no-reservation.html'">
-          <div class="text-type2">다가오는 방문 일정</div>
-          <ul class="list-type5 mt16">
-            <li class="type2">
-              <div class="title">날짜</div>
-              <div class="cont left">12월 31일 오후 3시</div>
-            </li>
-            <li class="type2">
-              <div class="title">장소</div>
-              <div class="cont left">서울시 강남구 서초대로 31길 20</div>
-            </li>
-          </ul>
-        </div>
-        <div class="card-main mt12 px16 py18 mt24">
-          <div class="align both">
-            <div class="text-type4">세차할 차량 정보</div>
-            <img src="images/ico_arrow_cross.svg" alt="">
-          </div>
-          <div class="align both">
-            <img class="w50" src="images/img_car.svg" alt="">
-            <div class="w50 align column center">
-              <div class="text-type2 black">
-                아반떼(CN7)<br>
-                하이브리드 인스퍼레이션
-              </div>
-              <div class="text-type2 black thin">123가 4567</div>
-            </div>
-          </div>
-        </div>
-        <div class="card-main mt12 px16 py18 mt24">
-          <div class="align both">
-            <div class="text-type4">담당 매니저</div>
-          </div>
-          <div class="align both">
-            <div class="mt16">
-              <div class="text-type4 fz13">김피스</div>
-              <div class="text-type4 fz13 fw400 mt6">경력 13년 · 자동차 외장관리 전문가</div>
-            </div>
-            <div class="profile">
-              <img src="images/@img_profile.png" alt="프로필 사진">
-            </div>
-          </div>
-          
-        </div>
-        <!-- 내역이 없을 때 -->
-        <a class="card-main mt12 px16 py18 text-center active" href="car-wash-reservation.html">
+        <a class="card-main px16 py18 text-center mt30 h114 align vm center" href="car-wash-reservation.html">
           <div class="">
-            <div class="text-type1">구독권 추가구매</div>
+            <div class="text-type1">아직 예약 내역이 없습니다.</div>
             <p class="text-type2 ico1 mt8 mr24">예약하러 가기</p>
           </div>
         </a>
