--- a/car-wash-reservation.html
+++ b/car-wash-reservation.html
@@ -54,7 +54,28 @@
         </div>
       </section>
     </main>
-
+    <!-- 네비 하단영역 -->
+    <div class="nav-foot">
+      <div class="nav-foot__layer">
+        <div class="nav-foot__mode">
+          <a class="btn-close-layer btn-weighbridge" href="weight-shot.html">계근대</a>
+          <a class="btn-close-layer btn-lame" href="weight-shot.html">앉은뱅이</a>
+        </div>
+      </div>
+      <!-- <div class="writing-explanation">작성중인 계량증명서가 있습니다</div> -->
+      <button 
+        class="btn-select" 
+        type="button" 
+        onclick="location.href='car-control.html'"></button>
+      <nav class="nav-foot__cont">
+        <ul>
+          <li class="ico-main active"><a href="index.html">메인</a></li>
+          <li class="ico-board"><a href="car-wash.html">세차</a></li>
+          <li class="ico-doc"><a href="#none" onclick="alert('중비중입니다')">주변</a></li>
+          <li class="ico-mypage"><a href="#none" onclick="alert('중비중입니다')">더보기</a></li>
+        </ul>
+      </nav>
+    </div>
     
     
   </body>
