--- a/car-wash-reservation2.html
+++ b/car-wash-reservation2.html
@@ -30,21 +30,21 @@
         <div class="input-type input-type1">
           <label for="txt2-1">주소</label>
           <div class="align input-search-wrap">
-            <input type="text" id="txt2-1" value="서울특별시 강남구 도곡로14길 17" placeholder="주소를 입력해주세요">
+            <input type="text" id="txt2-1" value="" placeholder="주소를 입력해주세요">
             <button class="btn-search gray rounded" type="button" onclick="alert('준비중입니다')">검색</button>
           </div>
-          <input class="mt8" type="text" id="txt2-2" value="상세주소" placeholder="상세주소를 입력해주세요">
+          <input class="mt8" type="text" id="txt2-2" value="" placeholder="상세주소를 입력해주세요">
         </div>
         <div class="input-type input-type1">
           <label for="txt3">날짜</label>
-          <input type="date" id="txt3">
+          <input type="date" id="txt3" >
         </div>
         <div class="input-type input-type1">
           <label>예약 가능 시간대</label>
           <div class="select-view-wrap2 bg-eb">
             <ul class="select-view">
               <li>
-                <i class="btn-small-white" type="button">8:00</i>
+                <i class="btn-small-white active" type="button">8:00</i>
               </li>
               <li>
                 <i class="btn-small-white" type="button">9:30</i>
@@ -65,13 +65,40 @@
             </ul>
           </div>
         </div>
-        <div class="fixed-bottom mt24">
+        <div class="">
           <button type="button" class="btn-main-on w100 mb10" onclick="location.href='car-wash-complete.html'">다음</button>
         </div>
       </section>
     </main>
-
     
+    <!-- 네비 하단영역 -->
+    <div class="nav-foot">
+      <div class="nav-foot__layer">
+        <div class="nav-foot__mode">
+          <a class="btn-close-layer btn-weighbridge" href="weight-shot.html">계근대</a>
+          <a class="btn-close-layer btn-lame" href="weight-shot.html">앉은뱅이</a>
+        </div>
+      </div>
+      <!-- <div class="writing-explanation">작성중인 계량증명서가 있습니다</div> -->
+      <button 
+        class="btn-select" 
+        type="button" 
+        onclick="location.href='car-control.html'"></button>
+      <nav class="nav-foot__cont">
+        <ul>
+          <li class="ico-main active"><a href="index.html">메인</a></li>
+          <li class="ico-board"><a href="car-wash.html">세차</a></li>
+          <li class="ico-doc"><a href="#none" onclick="alert('중비중입니다')">주변</a></li>
+          <li class="ico-mypage"><a href="#none" onclick="alert('중비중입니다')">더보기</a></li>
+        </ul>
+      </nav>
+    </div>
+    <script>
+      $('.btn-small-white').click(function() {
+        $('.btn-small-white').removeClass('active') 
+        $(this).toggleClass('active') 
+      })
+    </script>
     
   </body>
   <script src="js/button.js"></script>
