--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <section class="content">
         <div class="vehicle-management align both vm pt26">
           <a class="select ico1" href="">아반떼(CN7)<br> 하이브리드 인스퍼레이션</a>
-          <a class="link" href="">보유차량 관리</a>
+          <a class="link" href="#none" onclick="alert('중비중입니다')">보유차량 관리</a>
         </div>
         <div class="title-main align vm pt8">
           <h3 class="h3">123가 4567</h3>
@@ -58,19 +58,19 @@
         <div class="card-main mt16">
           <ul class="useful-info-list">
             <li class="useful-info-list__link">
-              <a href="">
+              <a href="#none" onclick="alert('중비중입니다')">
                 <div class="logo align center vm">
                   <img src="./images/ico_car_scanner.svg" alt="" />
                 </div>
                 <span>차량 OBD 스캐너</span>
               </a>
-              <a href="">
+              <a href="#none" onclick="alert('중비중입니다')">
                 <div class="logo align center vm">
                   <img src="./images/ico_car_report.svg" alt="" />
                 </div>
                 <span>차량 관리 리포트</span>
               </a>
-              <a href="">
+              <a href="#none" onclick="alert('중비중입니다')">
                 <div class="logo align center vm">
                   <img src="./images/ico_car_inspection.svg" alt="" />
                 </div>
@@ -99,65 +99,11 @@
         <ul>
           <li class="ico-main active"><a href="index.html">메인</a></li>
           <li class="ico-board"><a href="car-wash.html">세차</a></li>
-          <li class="ico-doc"><a href="around.html">주변</a></li>
-          <li class="ico-mypage"><a href="more-view.html">더보기</a></li>
+          <li class="ico-doc"><a href="#none" onclick="alert('중비중입니다')">주변</a></li>
+          <li class="ico-mypage"><a href="#none" onclick="alert('중비중입니다')">더보기</a></li>
         </ul>
       </nav>
     </div>
-    <div class="layer"></div>
-    <dialog class="dialog" close>
-      <p>인증이 완료되었습니다.</p>
-      <button class="btn-confirm" type="button">확인</button>
-    </dialog>
-    <dialog class="dialog dialog6 access-rights" close>
-      <div>
-        <strong class="text-center pb10">앱 접근권한 안내</strong>
-        <div class="txt-type5 text-center pb30">인증이 완료되었습니다.</div>
-        <ul class="access-rights__list">
-          <li>
-            <a href="" class="access-rights__link align vm ico1">
-              <div class="">
-                <div class="txt-type3">카메라 (필수)</div>
-                <div class="txt-type4">무게 측량 및 차량번호 촬영을 위한 권한</div>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="" class="access-rights__link align vm ico2">
-              <div class="">
-                <div class="txt-type3">카메라 (필수)</div>
-                <div class="txt-type4">무게 측량 및 차량번호 촬영을 위한 권한</div>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="" class="access-rights__link align vm ico3">
-              <div class="">
-                <div class="txt-type3">카메라 (필수)</div>
-                <div class="txt-type4">무게 측량 및 차량번호 촬영을 위한 권한</div>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="" class="access-rights__link align vm ico4">
-              <div class="">
-                <div class="txt-type3">카메라 (필수)</div>
-                <div class="txt-type4">무게 측량 및 차량번호 촬영을 위한 권한</div>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="" class="access-rights__link align vm ico5">
-              <div class="">
-                <div class="txt-type3">카메라 (필수)</div>
-                <div class="txt-type4">무게 측량 및 차량번호 촬영을 위한 권한</div>
-              </div>
-            </a>
-          </li>
-        </ul>
-      </div>
-      <button class="btn-confirm">확인</button>
-    </dialog>
   </body>
   <script src="js/button.js"></script>
   <script src="js/navFoot.js"></script>
