--- a/car-wash.html
+++ b/car-wash.html
@@ -96,8 +96,8 @@
         <ul>
           <li class="ico-main"><a href="index.html">메인</a></li>
           <li class="ico-board active"><a href="car-wash.html">세차</a></li>
-          <li class="ico-doc"><a href="around.html">주변</a></li>
-          <li class="ico-mypage"><a href="more-view.html">더보기</a></li>
+          <li class="ico-doc"><a href="#none" onclick="alert('준비중입니다')">주변</a></li>
+          <li class="ico-mypage"><a href="#none" onclick="alert('준비중입니다')">더보기</a></li>
         </ul>
       </nav>
     </div>
