--- a/car-wash-complete.html
+++ b/car-wash-complete.html
@@ -15,6 +15,7 @@
       <div class="align triple bg-f8 border-bottom">
         <a class="btn-back" href="javascript:window.history.back();"></a>
         <h2>정기세차 신청</h2>
+        <div></div>
       </div>
     </header>
     <header class="header-sub">
