--- a/car-wash-complete.html
+++ b/car-wash-complete.html
@@ -53,7 +53,7 @@
           예약 당일 잊지 않도록 푸시 알림을 보내드릴게요
         </div>
         <div class="mt50">
-          <button type="button" class="btn-main-on w100 mb10" onclick="location.href='index.html'">확인</button>
+          <button type="button" class="btn-main-on w100 mb10" onclick="location.href='home.html'">확인</button>
         </div>
       </section>
     </main>
