--- a/car-control.html
+++ b/car-control.html
@@ -76,7 +76,7 @@
       onclick="location.href='car-control.html'"></button>
       <nav class="nav-foot__cont">
         <ul>
-          <li class="ico-main"><a href="index.html">메인</a></li>
+          <li class="ico-main"><a href="home.html">메인</a></li>
           <li class="ico-board"><a href="car-wash.html">세차</a></li>
           <li class="ico-doc"><a href="around.html">주변</a></li>
           <li class="ico-mypage"><a href="more-view.html">더보기</a></li>
