--- a/car-wash.html
+++ b/car-wash.html
@@ -94,7 +94,7 @@
       onclick="location.href='car-control.html'"></button>
       <nav class="nav-foot__cont">
         <ul>
-          <li class="ico-main"><a href="index.html">메인</a></li>
+          <li class="ico-main"><a href="home.html">메인</a></li>
           <li class="ico-board active"><a href="car-wash.html">세차</a></li>
           <li class="ico-doc"><a href="#none" onclick="alert('준비중입니다')">주변</a></li>
           <li class="ico-mypage"><a href="#none" onclick="alert('준비중입니다')">더보기</a></li>
