--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
   <body class="bg-f8">
     <header class="header">
       <div>
-        <h1 class="h1"><a class="logo" href="index.html"></a></h1>
+        <h1 class="h1"><a class="logo" href="home.html"></a></h1>
         <div class="header__alarm">
           <a class="btn-alarm" href="#"></a>
         </div>
@@ -97,7 +97,7 @@
         onclick="location.href='car-control.html'"></button>
       <nav class="nav-foot__cont">
         <ul>
-          <li class="ico-main active"><a href="index.html">메인</a></li>
+          <li class="ico-main active"><a href="home.html">메인</a></li>
           <li class="ico-board"><a href="car-wash.html">세차</a></li>
           <li class="ico-doc"><a href="#none" onclick="alert('중비중입니다')">주변</a></li>
           <li class="ico-mypage"><a href="#none" onclick="alert('중비중입니다')">더보기</a></li>
