--- a/car-wash-complete.html
+++ b/car-wash-complete.html
@@ -73,7 +73,7 @@
         onclick="location.href='car-control.html'"></button>
       <nav class="nav-foot__cont">
         <ul>
-          <li class="ico-main active"><a href="index.html">메인</a></li>
+          <li class="ico-main active"><a href="home.html">메인</a></li>
           <li class="ico-board"><a href="car-wash.html">세차</a></li>
           <li class="ico-doc"><a href="#none" onclick="alert('중비중입니다')">주변</a></li>
           <li class="ico-mypage"><a href="#none" onclick="alert('중비중입니다')">더보기</a></li>
