--- a/no-reservation.html
+++ b/no-reservation.html
@@ -45,7 +45,7 @@
       onclick="location.href='car-control.html'"></button>
       <nav class="nav-foot__cont">
         <ul>
-          <li class="ico-main"><a href="index.html">메인</a></li>
+          <li class="ico-main"><a href="home.html">메인</a></li>
           <li class="ico-board active"><a href="car-wash.html">세차</a></li>
           <li class="ico-doc"><a href="around.html">주변</a></li>
           <li class="ico-mypage"><a href="more-view.html">더보기</a></li>
