--- a/car-wash-reservation2.html
+++ b/car-wash-reservation2.html
@@ -89,8 +89,8 @@
         <ul>
           <li class="ico-main active"><a href="home.html">메인</a></li>
           <li class="ico-board"><a href="car-wash.html">세차</a></li>
-          <li class="ico-doc"><a href="#none" onclick="alert('중비중입니다')">주변</a></li>
-          <li class="ico-mypage"><a href="#none" onclick="alert('중비중입니다')">더보기</a></li>
+          <li class="ico-doc"><a href="#none" onclick="alert('준비중입니다')">주변</a></li>
+          <li class="ico-mypage"><a href="#none" onclick="alert('준비중입니다')">더보기</a></li>
         </ul>
       </nav>
     </div>
