--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
       <section class="content">
         <div class="vehicle-management align both vm pt26">
           <a class="select ico1" href="">아반떼(CN7)<br> 하이브리드 인스퍼레이션</a>
-          <a class="link" href="#none" onclick="alert('중비중입니다')">보유차량 관리</a>
+          <a class="link" href="#none" onclick="alert('준비중입니다')">보유차량 관리</a>
         </div>
         <div class="title-main align vm pt8">
           <h3 class="h3">123가 4567</h3>
@@ -58,19 +58,19 @@
         <div class="card-main mt16">
           <ul class="useful-info-list">
             <li class="useful-info-list__link">
-              <a href="#none" onclick="alert('중비중입니다')">
+              <a href="#none" onclick="alert('준비중입니다')">
                 <div class="logo align center vm">
                   <img src="./images/ico_car_scanner.svg" alt="" />
                 </div>
                 <span>차량 OBD 스캐너</span>
               </a>
-              <a href="#none" onclick="alert('중비중입니다')">
+              <a href="#none" onclick="alert('준비중입니다')">
                 <div class="logo align center vm">
                   <img src="./images/ico_car_report.svg" alt="" />
                 </div>
                 <span>차량 관리 리포트</span>
               </a>
-              <a href="#none" onclick="alert('중비중입니다')">
+              <a href="#none" onclick="alert('준비중입니다')">
                 <div class="logo align center vm">
                   <img src="./images/ico_car_inspection.svg" alt="" />
                 </div>
@@ -99,8 +99,8 @@
         <ul>
           <li class="ico-main active"><a href="home.html">메인</a></li>
           <li class="ico-board"><a href="car-wash.html">세차</a></li>
-          <li class="ico-doc"><a href="#none" onclick="alert('중비중입니다')">주변</a></li>
-          <li class="ico-mypage"><a href="#none" onclick="alert('중비중입니다')">더보기</a></li>
+          <li class="ico-doc"><a href="#none" onclick="alert('준비중입니다')">주변</a></li>
+          <li class="ico-mypage"><a href="#none" onclick="alert('준비중입니다')">더보기</a></li>
         </ul>
       </nav>
     </div>
